--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,28 @@
+files: autogencontents/
+exclude: setup.py|autogencontents/version.py
 repos:
--   repo: local
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.4.0  # Use the ref you want to point at
     hooks:
-    -   id: gen_contents
-        name: Automatical generate contents
-        language: python
-        entry: python bin/Contents.py
+    -   id: check-added-large-files
+        always_run: true
+    -   id: fix-encoding-pragma
+        files: .py$
+    -   id: trailing-whitespace
+        exclude: .md$
+    -   id: end-of-file-fixer
+-   repo: https://github.com/pre-commit/mirrors-isort
+    rev: ''  # Use the revision sha / tag you want to point at
+    hooks:
+    -   id: isort
+-   repo: https://github.com/psf/black
+    rev: ''
+    hooks:
+    -   id: black
+        language_version: python3 # Should be a command that runs python3.6+
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: ''  # pick a git hash / tag to point to
+    hooks:
+    -   id: flake8
+        exclude: ^notebooks/|^data/
+        
